# proposal-scraper-js-cplusplus

./: .coverage  .gitignore  .gitlab-ci.yml  AGENTS.md  README.md  db.py  db_init.sql  pyproject.toml  pytest.ini  visuals.py
.github/workflows/: ci.yml
cplusplus/: emails.py  insert_db.py  main.py  models.py  proposal_stages.py  proposal_statusses.py  proposals.py  test_proposals.py  tests.py
cplusplus/data/: dates.txt  ids_2000.txt  ids_2013.txt  multiple_revisions.txt  proposals.json  stages.txt  titles.txt
cplusplus/data/cppreference/: 11.html  14.html  17.html  26.html
cplusplus/tests/: test_db.py  test_unit.py
cplusplus/tests/data/: comments.json  ids_1992.txt  ids_1995.txt  ids_2001.txt  ids_2002.txt  ids_2004.txt  ids_2025.txt  proposals.json
cplusplus/tests/data/cppreference/: 20.html  23.html
js/: __init__.py  insert_db.py  main.py  proposal_meeting_notes.py  proposal_revisions.py  proposal_stages.py  proposal_statusses.py
js/data/: meeting_notes.json  proposals.json
js/tests/: test_db.py
js/tests/data/: proposals.json  stage-4.txt
tests/: test_db.py
