[project]
name = "proposals-scraper-js-cplusplus"
version = "0.1.0"
description = "A web scraper for JS and C++ enhancement proposals."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "requests>=2.28",
    "beautifulsoup4>=4.12",
    "markdown>=3.4",
    "pygithub>=1.58",
    "GitPython>=3.1",
    "python-dotenv>=1.0",
    "tenacity>=8.0",
    "pydantic>=2.13.3",
    "html5lib>=1.1",
    "pymupdf>=1.27.2.3",
    "matplotlib>=3.10.9",
    "httpx>=0.28.1",
    "tqdm>=4.67.3",
    "dotenv>=0.9.9",
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
]

[dependency-groups]
dev = [
    "ruff>=0.15.13",
]

[tool.ruff.lint]
ignore = ["F841"]